resolved issues with use of biber to produce the bibliography

--- a/preamble.sty
+++ b/preamble.sty
@@ -18,6 +18,9 @@
 \RequirePackage{mathtools}	% included for use of coloneqq.
 
 \usepackage{tikz-cd} % create (commuting) diagrams.
+
+% BIBLIOGRAPHY MANAGEMENT
+
 \usepackage{biblatex}
 
 \addbibresource{references.bib}
