minor typo correction

--- a/report.tex
+++ b/report.tex
@@ -602,8 +602,20 @@ whenever $(L,L'')\in X_{A,B}$.
 \end{proof}
 
 \begin{lemma}
-TOP AND BOTTOM DIMENSIONS OF TRUNCATED FLAG
+Suppose $N_1,N_2\in\naturals$ with $\epsilon^{N_1}L_0\subset L_0'\subset \epsilon^{-N_1}L_0$ and $\epsilon^{N_2}L_0'\subset L_0''\subset \epsilon^{-N_2}L_0'$ whenever $(L,L',L'')\in Y_{A,B}$ and let $N=N_1+N_2$. Then
+\begin{equation*}
+\dim\left(\frac{\epsilon^{-N}L_0}{L_0''}\right) = d_{nN_1,0}(A) + d_{nN_2,0}(B)
+\end{equation*}
+and
+\begin{equation*}
+\dim\left(\frac{L_0''}{\epsilon^N L_0}\right) = 2Nr - d_{nN_1,0}(A) - d_{nN_2,0}(B),
+\end{equation*}
+whenever $(L,L'')\in X_{A,B}$.
 \end{lemma}
+
+\begin{proof}
+TO BE WRITTEN IN.
+\end{proof}
 
 \begin{lemma}
 \begin{equation*}
