--- a/report.tex
+++ b/report.tex
@@ -723,6 +723,22 @@ Suppose $\alpha\in G_L$ and $\beta\in G_{L'}$. $(L,\alpha L',\alpha\beta L'')\in
 Conversely, suppose $N''\in X_{A,B}^L$. $(L,N'')\in X_{A,B}$, so there is $N'$ such that $(L,N')\in\mathcal{O}_A$ and $(N',N'')\in\mathcal{O}_B$. There exist $\gamma,\delta\in G$ such that $\gamma (L,L') = (N,N')$ and $\delta (L',L'') = (N',N'')$. Then $(L,N',N'') = (L,\gamma L', \delta L'') = (L, \gamma L',\gamma (\gamma^{-1}\delta)L'')$, where $\gamma\in G_L$ and $\gamma^{-1}\delta\in G_{L'}$. This shows $N'' \in G_L G_{L'} L''$ as required.
 \end{proof}
 
+Given $N\in\naturals$, define
+\begin{equation*}
+H_N = \left\{ h\in G_L: h=1 \text{ on } \frac{\epsilon^{-(1+N)}L_0}{\epsilon^N L_0} \right\}.
+\end{equation*}
+Explicitly, the condition $h=1$ on $\epsilon^{-(1+N)}L_0/{\epsilon^N L_0}$ means: $h(x) + \epsilon^N L_0 = x + \epsilon^N L_0$ for $x\in\epsilon^{-(1+N)}L_0$.
+
+\begin{lemma}
+$H_N$ is a normal subgroup in $G_L$, for any $N\in\naturals$.
+\end{lemma}
+
+\begin{proof}
+$H_N\subset G_L$ by definition. Suppose $h,h'\in H_N$ and let $x\in\epsilon^{-(1+N)}L_0$. $h'(x)\in\epsilon^{-(1+N)}L_0$ as $h'\in G_L$, so $hh'(x) + \epsilon^N L_0 = h'(x) + \epsilon^N L_0 = x + \epsilon^N L_0$, which shows $hh'\in H_N$. $h(x)-x\in\epsilon^N L_0$, so $h^{-1}(x) - x = -h^{-1}(h(x)-x)\in\epsilon^N L_0$. $h^{-1}\in H_N$, so $H_N$ is a subgroup of $G_L$.
+
+Let $g\in G_L$. $hg^{-1}(x) + \epsilon^N L_0 = g^{-1}(x)$ as $g^{-1}(x)\in\epsilon^{-(1+N)}L_0$, so $ghg^{-1}(x) + \epsilon^N L_0 = gg^{-1}(x) + \epsilon^N L_0 = x + \epsilon^N L_0$. Thus $ghg^{-1}\in H_N$, which proves $H_N$ is a normal subgroup in $G_L$.
+\end{proof} 
+
 \section{Existence of a maximum}
 
 \begin{proposition}\label{proposition:existence-maximum}
