gave a clearer description of the generic algebra without having to prove its existence

--- a/preamble.sty
+++ b/preamble.sty
@@ -40,6 +40,11 @@
 %marker to continue typing:
 \newcommand{\seeyoulater}{ {\color{orange}TO BE CONTINUED.} }
 
+% proof reminder(s)
+\newcommand{\provelater}{ {\color{red}INCLUDE A PROOF LATER.} }
+
+\newcommand{\finishproof}{ {\color{red}COMPLETE THIS PROOF.} }
+
 % -------------------------------------------- %
 % 				STYLE AND FORMATTING			 %
 % -------------------------------------------- %
